--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,11 +16,12 @@
         <img src="{{movieData.Poster}}">
       </div>
     </div>
-
-    <div class="col-sm-8">
-      <div *ngIf="movieData.Title">
-        <h1>{{movieData.Title}}</h1>
-        <h2>Directed by : {{movieData.Director}}</h2>
+    <div>
+      <div class="col-sm-8">
+        <div *ngIf="movieData.Title">
+          <h1>{{movieData.Title}}</h1>
+          <h2>Directed by : {{movieData.Director}}</h2>
+        </div>
       </div>
     </div>
   </div>
